--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+justify-content: space-between;
+}
+
+.header p {
+  margin-left:50px;
+}
+
+.header input{
+  width: 200px;
+  outline: none;
+  margin-right: 50px;
+}
+
+.home{
+  margin-top: 20px;
+}
+
+hr {
+  margin: 20px 50px;
+}
+
+.card-container{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  margin: 0px 100px;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.meetup-card{
+  position: relative;
+  margin: 10px;
+  flex: 0 0 30%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.meetup-card  div img{
+  width: 250px;
+  height:250px;
+  border-radius: 10px;
+}
+
+.date-time{
+  font-size: 14px;
+  color: grey;
+}
+
+.eventType{
+  position: absolute;
+  top:0;
+  margin: 5px;
+  background: white;
+  padding: 2px;
+  border-radius: 5px ;
+}
+
+.eventtypedropdown{
+  
 }
