--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body{
+  background-color: whitesmoke;
+}
+
 .header{
   display: flex;
 justify-content: space-between;
@@ -126,6 +130,56 @@ select {
 .addtionalInformation>*{
   margin-bottom: 10px;
 }
+
+.card-detail{
+  width:400px;
+  background-color: white;
+  padding: 10px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.card-detail >*{
+  margin: 20px;
+}
+.time-detail{
+  display: flex;
+}
+
+.time-detail > *{
+  margin:5px;
+}
+
+.address p >*{
+  margin:5px;
+}
+.currency p >*{
+  margin :10px;
+}
+
+.speaker-card{
+  display: flex;
+  justify-content: space-around;
+}
+
+.speaker-detail{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 20px;
+  width: 150px;
+  background-color: white;
+  padding: 20px;
+}
+.speaker-detail :nth-of-type(1){
+  display: flex;
+  justify-content: center;
+}
+.speaker-detail :nth-of-type(2) p{
+  word-wrap: break-word;
+  width: 100px;
+  text-align: center;
+}
 @media only screen and (max-width: 768px){
   .header p {
     margin-left:25px;
@@ -154,5 +208,14 @@ select {
 }
 hr {
   margin: 20px 25px;
+}
+
+.card-detail{
+  width:300px;
+}
+
+.speaker-detail{
+  padding: 10px;
+  width: 120px;
 }
 }
